fixed z-index bug on collection page and missing hover states

--- a/dev/scss/main/components/collapsible.scss
+++ b/dev/scss/main/components/collapsible.scss
@@ -1,12 +1,12 @@
 @layer components {
   [data-collapsible-group] {
     [data-collapsible-target] {
-      @apply js:max-h-0
-      js:overflow-hidden;
+      @apply opacity-0
+      transition-opacity js:max-h-0 js:overflow-hidden;
     }
     &.collapsible-is-open {
       > [data-collapsible-target] {
-        @apply js:max-h-[9999px] js:overflow-y-auto;
+        @apply opacity-100 js:max-h-[9999px] js:overflow-y-auto;
       }
     }
   }
